fixed blog and tutorial link spacing on homepage

--- a/css/main.scss
+++ b/css/main.scss
@@ -152,6 +152,10 @@ main {
 	p {
 		font-size: 20px;
 		margin-bottom: 10px;
+
+		&:last-child {
+			margin-bottom: 0px;
+		}
 	}
 
 	&.avoid-ribbon {
@@ -224,6 +228,15 @@ footer {
 	&:after {
 		clear: both;
 	}
+}
+
+ul{
+	padding: 0px;
+}
+
+li {
+	list-style: none;
+
 }
 
 // code coloring:
